# Copyright Offene Werkstatt Wädenswil
# SPDX-License-Identifier: MIT

# pw_sync backend for Particle Device OS

load("@rules_cc//cc:cc_library.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "interrupt_spin_lock",
    srcs = ["interrupt_spin_lock.cc"],
    hdrs = [
        "public/pw_sync_particle/interrupt_spin_lock_inline.h",
        "public/pw_sync_particle/interrupt_spin_lock_native.h",
        "public_overrides/pw_sync_backend/interrupt_spin_lock_inline.h",
        "public_overrides/pw_sync_backend/interrupt_spin_lock_native.h",
    ],
    includes = [
        "public",
        "public_overrides",
    ],
    deps = [
        "//:device_os_headers",
        "//:hal_dynalib",
        "@pigweed//pw_sync:interrupt_spin_lock.facade",
    ],
    target_compatible_with = ["@pigweed//pw_build/constraints/arm:cortex-m33"],
)

cc_library(
    name = "mutex",
    hdrs = [
        "public/pw_sync_particle/mutex_inline.h",
        "public/pw_sync_particle/mutex_native.h",
        "public_overrides/pw_sync_backend/mutex_inline.h",
        "public_overrides/pw_sync_backend/mutex_native.h",
    ],
    includes = [
        "public",
        "public_overrides",
    ],
    deps = [
        "//:device_os_headers",
        "//:hal_dynalib",
        "@pigweed//pw_assert:assert",
        "@pigweed//pw_sync:mutex.facade",
    ],
    target_compatible_with = ["@pigweed//pw_build/constraints/arm:cortex-m33"],
)

cc_library(
    name = "timed_mutex",
    srcs = ["timed_mutex.cc"],
    hdrs = [
        "public/pw_sync_particle/timed_mutex_inline.h",
        "public_overrides/pw_sync_backend/timed_mutex_inline.h",
    ],
    includes = [
        "public",
        "public_overrides",
    ],
    deps = [
        "//:device_os_headers",
        "//:hal_dynalib",
        "@pigweed//pw_chrono:system_clock",
        "@pigweed//pw_sync:timed_mutex.facade",
    ],
    target_compatible_with = ["@pigweed//pw_build/constraints/arm:cortex-m33"],
)

cc_library(
    name = "binary_semaphore",
    srcs = ["binary_semaphore.cc"],
    hdrs = [
        "public/pw_sync_particle/binary_semaphore_inline.h",
        "public/pw_sync_particle/binary_semaphore_native.h",
        "public_overrides/pw_sync_backend/binary_semaphore_inline.h",
        "public_overrides/pw_sync_backend/binary_semaphore_native.h",
    ],
    includes = [
        "public",
        "public_overrides",
    ],
    deps = [
        "//:device_os_headers",
        "//:hal_dynalib",
        "@pigweed//pw_assert:assert",
        "@pigweed//pw_chrono:system_clock",
        "@pigweed//pw_sync:binary_semaphore.facade",
    ],
    target_compatible_with = ["@pigweed//pw_build/constraints/arm:cortex-m33"],
)

cc_library(
    name = "counting_semaphore",
    srcs = ["counting_semaphore.cc"],
    hdrs = [
        "public/pw_sync_particle/counting_semaphore_inline.h",
        "public/pw_sync_particle/counting_semaphore_native.h",
        "public_overrides/pw_sync_backend/counting_semaphore_inline.h",
        "public_overrides/pw_sync_backend/counting_semaphore_native.h",
    ],
    includes = [
        "public",
        "public_overrides",
    ],
    deps = [
        "//:device_os_headers",
        "//:hal_dynalib",
        "@pigweed//pw_assert:check",
        "@pigweed//pw_chrono:system_clock",
        "@pigweed//pw_sync:counting_semaphore.facade",
    ],
    target_compatible_with = ["@pigweed//pw_build/constraints/arm:cortex-m33"],
)

cc_library(
    name = "thread_notification",
    srcs = ["thread_notification.cc"],
    hdrs = [
        "public/pw_sync_particle/thread_notification_inline.h",
        "public/pw_sync_particle/thread_notification_native.h",
        "public_overrides/pw_sync_backend/thread_notification_inline.h",
        "public_overrides/pw_sync_backend/thread_notification_native.h",
    ],
    implementation_deps = ["@pigweed//pw_assert:check"],
    includes = [
        "public",
        "public_overrides",
    ],
    deps = [
        "//:device_os_headers",
        "//:hal_dynalib",
        "@pigweed//pw_assert:assert",
        "@pigweed//pw_sync:interrupt_spin_lock",
        "@pigweed//pw_sync:thread_notification.facade",
    ],
    target_compatible_with = ["@pigweed//pw_build/constraints/arm:cortex-m33"],
)

cc_library(
    name = "timed_thread_notification",
    srcs = ["timed_thread_notification.cc"],
    hdrs = [
        "public/pw_sync_particle/timed_thread_notification_inline.h",
        "public_overrides/pw_sync_backend/timed_thread_notification_inline.h",
    ],
    implementation_deps = ["@pigweed//pw_assert:check"],
    includes = [
        "public",
        "public_overrides",
    ],
    deps = [
        "//:device_os_headers",
        "//:hal_dynalib",
        "@pigweed//pw_chrono:system_clock",
        "@pigweed//pw_sync:timed_thread_notification.facade",
    ],
    target_compatible_with = ["@pigweed//pw_build/constraints/arm:cortex-m33"],
)
