# Copyright Offene Werkstatt Wädenswil
# SPDX-License-Identifier: MIT

# pw_sync backend for Particle Device OS

load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("//rules:particle_test.bzl", "particle_cc_test")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "interrupt_spin_lock",
    srcs = ["interrupt_spin_lock.cc"],
    hdrs = [
        "public/pw_sync_particle/interrupt_spin_lock_inline.h",
        "public/pw_sync_particle/interrupt_spin_lock_native.h",
        "public_overrides/pw_sync_backend/interrupt_spin_lock_inline.h",
        "public_overrides/pw_sync_backend/interrupt_spin_lock_native.h",
    ],
    includes = [
        "public",
        "public_overrides",
    ],
    deps = [
        "//:device_os_headers",
        "//:hal_dynalib",
        "@pigweed//pw_sync:interrupt_spin_lock.facade",
    ],
    target_compatible_with = ["@pigweed//pw_build/constraints/arm:cortex-m33"],
)

cc_library(
    name = "mutex",
    hdrs = [
        "public/pw_sync_particle/mutex_inline.h",
        "public/pw_sync_particle/mutex_native.h",
        "public_overrides/pw_sync_backend/mutex_inline.h",
        "public_overrides/pw_sync_backend/mutex_native.h",
    ],
    includes = [
        "public",
        "public_overrides",
    ],
    deps = [
        "//:device_os_headers",
        "//:hal_dynalib",
        "@pigweed//pw_assert:assert",
        "@pigweed//pw_sync:mutex.facade",
    ],
    target_compatible_with = ["@pigweed//pw_build/constraints/arm:cortex-m33"],
)

cc_library(
    name = "timed_mutex",
    srcs = ["timed_mutex.cc"],
    hdrs = [
        "public/pw_sync_particle/timed_mutex_inline.h",
        "public_overrides/pw_sync_backend/timed_mutex_inline.h",
    ],
    includes = [
        "public",
        "public_overrides",
    ],
    deps = [
        "//:device_os_headers",
        "//:hal_dynalib",
        "@pigweed//pw_chrono:system_clock",
        "@pigweed//pw_sync:timed_mutex.facade",
    ],
    target_compatible_with = ["@pigweed//pw_build/constraints/arm:cortex-m33"],
)

cc_library(
    name = "binary_semaphore",
    srcs = ["binary_semaphore.cc"],
    hdrs = [
        "public/pw_sync_particle/binary_semaphore_inline.h",
        "public/pw_sync_particle/binary_semaphore_native.h",
        "public_overrides/pw_sync_backend/binary_semaphore_inline.h",
        "public_overrides/pw_sync_backend/binary_semaphore_native.h",
    ],
    includes = [
        "public",
        "public_overrides",
    ],
    deps = [
        "//:device_os_headers",
        "//:hal_dynalib",
        "@pigweed//pw_assert:assert",
        "@pigweed//pw_chrono:system_clock",
        "@pigweed//pw_sync:binary_semaphore.facade",
    ],
    target_compatible_with = ["@pigweed//pw_build/constraints/arm:cortex-m33"],
)

cc_library(
    name = "counting_semaphore",
    srcs = ["counting_semaphore.cc"],
    hdrs = [
        "public/pw_sync_particle/counting_semaphore_inline.h",
        "public/pw_sync_particle/counting_semaphore_native.h",
        "public_overrides/pw_sync_backend/counting_semaphore_inline.h",
        "public_overrides/pw_sync_backend/counting_semaphore_native.h",
    ],
    includes = [
        "public",
        "public_overrides",
    ],
    deps = [
        "//:device_os_headers",
        "//:hal_dynalib",
        "@pigweed//pw_assert:assert",
        "@pigweed//pw_assert:check",
        "@pigweed//pw_chrono:system_clock",
        "@pigweed//pw_sync:counting_semaphore.facade",
    ],
    target_compatible_with = ["@pigweed//pw_build/constraints/arm:cortex-m33"],
)

cc_library(
    name = "thread_notification",
    srcs = ["thread_notification.cc"],
    hdrs = [
        "public/pw_sync_particle/thread_notification_inline.h",
        "public/pw_sync_particle/thread_notification_native.h",
        "public_overrides/pw_sync_backend/thread_notification_inline.h",
        "public_overrides/pw_sync_backend/thread_notification_native.h",
    ],
    implementation_deps = [
        "@pigweed//pw_assert:check",
    ],
    includes = [
        "public",
        "public_overrides",
    ],
    deps = [
        "//:device_os_headers",
        "//:hal_dynalib",
        "@pigweed//pw_assert:assert",
        "@pigweed//pw_sync:interrupt_spin_lock",
        "@pigweed//pw_sync:thread_notification.facade",
    ],
    target_compatible_with = ["@pigweed//pw_build/constraints/arm:cortex-m33"],
)

cc_library(
    name = "timed_thread_notification",
    srcs = ["timed_thread_notification.cc"],
    hdrs = [
        "public/pw_sync_particle/timed_thread_notification_inline.h",
        "public_overrides/pw_sync_backend/timed_thread_notification_inline.h",
    ],
    implementation_deps = ["@pigweed//pw_assert:check"],
    includes = [
        "public",
        "public_overrides",
    ],
    deps = [
        "//:device_os_headers",
        "//:hal_dynalib",
        "@pigweed//pw_chrono:system_clock",
        "@pigweed//pw_sync:timed_thread_notification.facade",
    ],
    target_compatible_with = ["@pigweed//pw_build/constraints/arm:cortex-m33"],
)

# =============================================================================
# Facade Tests
# =============================================================================
# These tests verify that pw_sync_particle backends behave correctly.
# They use the Pigweed facade test sources and run on-device.
#
# The particle backends use C++ headers that are not C-compatible, so we
# provide C++ implementations of the C API test wrappers (facade_test_stubs.cc)
# instead of using the original C test files.
#
# Build: bazel build --config=p2 //pw_sync_particle:binary_semaphore_facade_test
# Flash: bazel run --config=p2 //pw_sync_particle:binary_semaphore_facade_test_flash

particle_cc_test(
    name = "binary_semaphore_facade_test",
    srcs = [
        "binary_semaphore_facade_test_stubs.cc",
        "@pigweed//pw_sync:binary_semaphore_facade_test.cc",
    ],
    deps = [
        "@pigweed//pw_chrono:system_clock",
        "@pigweed//pw_preprocessor",
        "@pigweed//pw_sync:binary_semaphore",
    ],
)

particle_cc_test(
    name = "counting_semaphore_facade_test",
    srcs = [
        "counting_semaphore_facade_test_stubs.cc",
        "@pigweed//pw_sync:counting_semaphore_facade_test.cc",
    ],
    deps = [
        "@pigweed//pw_chrono:system_clock",
        "@pigweed//pw_preprocessor",
        "@pigweed//pw_sync:counting_semaphore",
    ],
)

particle_cc_test(
    name = "mutex_facade_test",
    srcs = [
        "mutex_facade_test_stubs.cc",
        "@pigweed//pw_sync:mutex_facade_test.cc",
    ],
    deps = [
        "@pigweed//pw_preprocessor",
        "@pigweed//pw_sync:borrow_testing",
        "@pigweed//pw_sync:mutex",
    ],
)

particle_cc_test(
    name = "timed_mutex_facade_test",
    srcs = [
        "timed_mutex_facade_test_stubs.cc",
        "@pigweed//pw_sync:timed_mutex_facade_test.cc",
    ],
    deps = [
        "@pigweed//pw_chrono:system_clock",
        "@pigweed//pw_preprocessor",
        "@pigweed//pw_sync:timed_borrow_testing",
        "@pigweed//pw_sync:timed_mutex",
    ],
)

particle_cc_test(
    name = "interrupt_spin_lock_facade_test",
    srcs = [
        "interrupt_spin_lock_facade_test_stubs.cc",
        "@pigweed//pw_sync:interrupt_spin_lock_facade_test.cc",
    ],
    deps = [
        "@pigweed//pw_preprocessor",
        "@pigweed//pw_sync:borrow_testing",
        "@pigweed//pw_sync:interrupt_spin_lock",
    ],
)

particle_cc_test(
    name = "thread_notification_facade_test",
    srcs = [
        "@pigweed//pw_sync:thread_notification_facade_test.cc",
    ],
    deps = [
        "@pigweed//pw_sync:thread_notification",
        "@pigweed//pw_sync:threaded_testing",
    ],
)

particle_cc_test(
    name = "timed_thread_notification_facade_test",
    srcs = [
        "@pigweed//pw_sync:timed_thread_notification_facade_test.cc",
    ],
    deps = [
        "@pigweed//pw_chrono:system_clock",
        "@pigweed//pw_sync:timed_thread_notification",
        "@pigweed//pw_sync:timed_threaded_testing",
    ],
)
