# Copyright Offene Werkstatt Wädenswil
# SPDX-License-Identifier: MIT

package(default_visibility = ["//visibility:public"])

# Provides main() for on-device unit tests.
# Called via pigweed_entry.cc: setup() -> main()
cc_library(
    name = "main",
    srcs = ["main.cc"],
    testonly = True,
    target_compatible_with = [
        "@pigweed//pw_build/constraints/arm:cortex-m33",
    ],
    deps = [
        "//:device_os_headers",
        "@pigweed//pw_span",
        "@pigweed//pw_sys_io",
        "@pigweed//pw_unit_test",
        "@pigweed//pw_unit_test:simple_printing_event_handler",
    ],
)
