# Copyright Offene Werkstatt Wädenswil
# SPDX-License-Identifier: MIT

# P2 test platform for integration tests (particle_bazel internal).
#
# This platform provides backend configuration for running integration tests
# on P2 hardware WITHOUT requiring maco_firmware dependencies. Test firmware
# uses pb_integration_tests/firmware:test_system_p2 to provide the system.

load("@pigweed//pw_build:merge_flags.bzl", "flags_from_dict")
load("@rules_cc//cc:cc_library.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

platform(
    name = "p2_test",
    constraint_values = [
        "@platforms//os:none",
        "@platforms//cpu:armv8-m",
        "@pigweed//pw_build/constraints/arm:cortex-m33",
    ],
    flags = flags_from_dict({
        # Pigweed backend bindings for P2 (from particle-bazel)
        "@pigweed//pw_assert:assert_backend": "@pigweed//pw_assert_basic",
        "@pigweed//pw_assert:check_backend": "@pigweed//pw_assert_basic",
        "@pigweed//pw_assert:check_backend_impl": "@pigweed//pw_assert_basic:impl",
        "@pigweed//pw_assert_basic:handler_backend": "//pw_assert_particle:handler",

        # Log backend: tokenized logging via pw_system RPC
        "@pigweed//pw_log:backend": "@pigweed//pw_log_tokenized",
        "@pigweed//pw_log:backend_impl": "@pigweed//pw_log_tokenized:impl",
        "@pigweed//pw_log_tokenized:handler_backend": "@pigweed//pw_system:log_backend",

        # System I/O
        "@pigweed//pw_sys_io:backend": "//pw_sys_io_particle:sys_io",

        # Chrono backends
        "@pigweed//pw_chrono:system_clock_backend": "//pw_chrono_particle:system_clock",
        "@pigweed//pw_chrono:system_timer_backend": "//pw_chrono_particle:system_timer",

        # Thread backends
        "@pigweed//pw_thread:id_backend": "//pw_thread_particle:id",
        "@pigweed//pw_thread:yield_backend": "//pw_thread_particle:yield",
        "@pigweed//pw_thread:sleep_backend": "//pw_thread_particle:sleep",
        "@pigweed//pw_thread:thread_backend": "//pw_thread_particle:thread",
        "@pigweed//pw_thread:iteration_backend": "//pw_thread_particle:thread_iteration",
        "@pigweed//pw_thread:thread_creation_backend": "//pw_thread_particle:thread_context",

        # Sync backends
        "@pigweed//pw_sync:mutex_backend": "//pw_sync_particle:mutex",
        "@pigweed//pw_sync:timed_mutex_backend": "//pw_sync_particle:timed_mutex",
        "@pigweed//pw_sync:interrupt_spin_lock_backend": "//pw_sync_particle:interrupt_spin_lock",
        "@pigweed//pw_sync:binary_semaphore_backend": "//pw_sync_particle:binary_semaphore",
        "@pigweed//pw_sync:counting_semaphore_backend": "//pw_sync_particle:counting_semaphore",
        "@pigweed//pw_sync:thread_notification_backend": "//pw_sync_particle:thread_notification",
        "@pigweed//pw_sync:timed_thread_notification_backend": "//pw_sync_particle:timed_thread_notification",

        # pw_system backends
        "@pigweed//pw_system:io_backend": "@pigweed//pw_system:sys_io_target_io",
        "@pigweed//pw_system:target_hooks_backend": "//targets/p2_test:target_hooks",
        "@pigweed//pw_system:extra_platform_libs": "//targets/p2_test:extra_platform_libs",
    }),
)

cc_library(
    name = "target_hooks",
    srcs = ["target_hooks.cc"],
    target_compatible_with = ["@pigweed//pw_build/constraints/arm:cortex-m33"],
    deps = [
        "//pw_thread_particle:thread",
        "@pigweed//pw_thread:thread",
    ],
)

cc_library(
    name = "extra_platform_libs",
    deps = [
        "//:hal_dynalib",
        "@pigweed//pw_system:log_backend",
        "@pigweed//pw_tokenizer:linker_script",
    ],
    alwayslink = 1,
)
